# coursework4

./: CMakeLists.txt  README.md  TimeAnalysis.cpp
Client/: ClientProgram.cpp
Index/: IndexProgram.cpp  IndexProgram.h
Server/: ServerProgram.cpp
Tests/: IndexerTest.cpp
